# manual-take-home

./: README.md  pyproject.toml
analytics_engineering/: dbt_project.yml
analytics_engineering/models/core/: _core__schema.yml  dim_date.sql
analytics_engineering/models/data_warehouse/: _dwh__schema.yml  dim_customer.sql  fact_subscription_acquisition.sql  fact_subscription_activity.sql
analytics_engineering/models/presentation/: _presentation__schema.yml  tbl_subscription_acquisition_summary.sql  tbl_subscription_activity.sql
analytics_engineering/models/staging/manual_clean/: _manual_clean__schema.yml  _manual_clean__source.yml  stg_acq_orders.sql  stg_activity.sql  stg_customers.sql
cleaning_scripts/: data-cleaning.py
sandbox-notebooks/: data-cleaning.ipynb  data-profiling.ipynb
