[tool.poetry]
name = "manual-take-home"
version = "0.1.0"
description = ""
authors = ["AWS"]
package-mode = false

[tool.poetry.dependencies]

python = "^3.9"
dbt-bigquery = "1.9.1"
pandas = "^2.0"
numpy = "^1.24"
jupyter = "^1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
